Add all dotfiles to the list of pep8 exceptions
This helps avoid bogus errors in third party configuration files such as
those in .ropeproject folders.

Change-Id: I4988b5d5dc150d5ee949266916d0f06a4d4176ce
Closes-Bug: 1414869

--- a/tox.ini
+++ b/tox.ini
@@ -57,7 +57,7 @@ commands = oslo-config-generator --config-file=config-generator.conf
 # H803 no full stop at the end of the commit message
 ignore = H404,H405,H803
 show-source = true
-exclude=.venv,.git,.tox,dist,*openstack/common*,*lib/python*,*egg,tools,build
+exclude=.*,dist,*openstack/common*,*lib/python*,*egg,tools,build
 max-complexity=20
 
 [hacking]
