Test auto-scaling for neutron
Test does the following:
1. Creates an instances with LoadBalancer
2. Increased desired capacity
3. Check that LB resources has been increased
Test replaces test_neutron_autoscaling unittest.
Part of blueprint decouple-nested.

Change-Id: I3b4924bfe3e427ffc77b23e0a3b6b08accfa39eb

--- a/heat_integrationtests/heat_integrationtests.conf.sample
+++ b/heat_integrationtests/heat_integrationtests.conf.sample
@@ -23,6 +23,9 @@
 # Visible fixed network name  (string value)
 #fixed_network_name = private
 
+# Visible fixed sub-network name  (string value)
+#fixed_subnet_name = private-subnet
+
 # Name of image to use for tests which boot servers. (string value)
 #image_ref = <None>
 
