Skip Stack Adopt/Abandon integration tests when Stack Adopt is disabled
Closes-Bug: 1415838
Change-Id: I79a8dab72579e9fe1fccb2a67d12cc57d14640ae

--- a/heat_integrationtests/heat_integrationtests.conf.sample
+++ b/heat_integrationtests/heat_integrationtests.conf.sample
@@ -69,3 +69,9 @@
 
 # Default size in GB for volumes created by volumes tests (integer value)
 #volume_size = 1
+
+# Skip Stack Adopt Integration tests (boolean value)
+#skip_stack_adopt_tests = false
+
+# Skip Stack Abandon Integration tests (boolean value)
+#skip_stack_abandon_tests = false
