Get tox to generate config for heat_integrationtests
Change-Id: Ic1ee2a333f4aa25ccdc80ed2fd0a0d4f064bd1d0

--- a/tox.ini
+++ b/tox.ini
@@ -49,7 +49,9 @@ deps = -r{toxinidir}/requirements.txt
 commands = python setup.py build_sphinx
 
 [testenv:genconfig]
-commands = oslo-config-generator --config-file=config-generator.conf
+commands =
+    oslo-config-generator --config-file=config-generator.conf
+    oslo-config-generator --config-file=heat_integrationtests/config-generator.conf
 
 [flake8]
 # H404 multi line docstring should start with a summary
