Integration test for software-config tools
This test currently exercises the following hooks:
- script
- puppet
- cfn-init
This requires devstack building a custom image. Since gating doesn't
yet have a test image available the test is skipped by default via
config value skip_software_config_tests.

To run this test locally, build your own custom image and set
skip_software_config_tests=false in
heat_integrationtests/heat_integrationtests.conf

Change-Id: I9d27664638de95e52bc954e1fa00299e6711de90

--- a/heat_integrationtests/heat_integrationtests.conf.sample
+++ b/heat_integrationtests/heat_integrationtests.conf.sample
@@ -67,6 +67,9 @@
 # The mask bits for tenant ipv4 subnets (integer value)
 #tenant_network_mask_bits = 28
 
+# Skip software config deployment tests (boolean value)
+#skip_software_config_tests = true
+
 # Default size in GB for volumes created by volumes tests (integer value)
 #volume_size = 1
 
