--- a/setup.cfg
+++ b/setup.cfg
@@ -64,7 +64,7 @@ heat.constraints =
     neutron.router = heat.engine.clients.os.neutron:RouterConstraint
     neutron.subnet = heat.engine.clients.os.neutron:SubnetConstraint
     glance.image = heat.engine.clients.os.glance:ImageConstraint
-    iso_8601 = heat.engine.resources.iso_8601:ISO8601Constraint
+    iso_8601 = heat.engine.iso_8601:ISO8601Constraint
     nova.server = heat.engine.clients.os.nova:ServerConstraint
     nova.keypair = heat.engine.clients.os.nova:KeypairConstraint
     cinder.volume = heat.engine.clients.os.cinder:VolumeConstraint
