Use the AWS instance type in the cfn_init scenario
All the other resources in the template are of the AWS kind and this
will help with merging I9d01c5e7de630df5058429353fa17b3536ee8807.

This was derived from tempest change
I61346b569ed16d8a3c7610a85351ef723287fd83

Change-Id: Icd15a9863c00e63409af635b24938bec3f125e16
Co-Authored-By: Tomas Sedovic <tomas@sedovic.cz>

--- a/heat_integrationtests/scenario/templates/test_server_cfn_init.yaml
+++ b/heat_integrationtests/scenario/templates/test_server_cfn_init.yaml
@@ -9,7 +9,7 @@ Parameters:
     Type: String
   image:
     Type: String
-  network:
+  subnet:
     Type: String
   timeout:
     Type: Number
@@ -28,7 +28,7 @@ Resources:
     Properties:
       UserName: {Ref: CfnUser}
   SmokeServer:
-    Type: OS::Nova::Server
+    Type: AWS::EC2::Instance
     Metadata:
       AWS::CloudFormation::Init:
         config:
@@ -48,14 +48,13 @@ Resources:
               owner: root
               group: root
     Properties:
-      image: {Ref: image}
-      flavor: {Ref: flavor}
-      key_name: {Ref: key_name}
-      security_groups:
+      ImageId: {Ref: image}
+      InstanceType: {Ref: flavor}
+      KeyName: {Ref: key_name}
+      SubnetId: {Ref: subnet}
+      SecurityGroups:
       - {Ref: SmokeSecurityGroup}
-      networks:
-      - uuid: {Ref: network}
-      user_data:
+      UserData:
         Fn::Replace:
         - WaitHandle: {Ref: WaitHandle}
         - |
@@ -79,4 +78,4 @@ Outputs:
   SmokeServerIp:
     Description: IP address of server
     Value:
-      Fn::GetAtt: [SmokeServer, first_address]
+      Fn::GetAtt: [SmokeServer, PublicIp]
