Add integration scenario test for Neutron LBaaS
- added new scenario test that checks work of Neutron LBaaS resource:
test creates stack with two servers and LB resource, checks connection,
adds one more member to LP and finally checks load balancing.

Co-Authored-by: Sergey Kraynev <skraynev@mirantis.com>

Change-Id: I5d05909d437a2ba7b047ae758f3b5d8669fc8b1b

--- a/heat_integrationtests/heat_integrationtests.conf.sample
+++ b/heat_integrationtests/heat_integrationtests.conf.sample
@@ -78,3 +78,6 @@
 
 # Skip Stack Abandon Integration tests (boolean value)
 #skip_stack_abandon_tests = false
+
+# Timeout in seconds to wait for connectivity to server
+#connectivity_timeout = 120
