Add versions to all contrib plugins
This change adds versions to the setup.cfg files of all the contrib
plugins, so that pbr can determine the plugin version when the plugins
are installed with pip. Because contrib plugins are not officially
supported, a version of 0.1 is used.

Change-Id: I7e55d7d018ecdbb878a22b236d75ecf87f7e3ed6
Closes-Bug: #1428879

--- a/contrib/extraroute/setup.cfg
+++ b/contrib/extraroute/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
 name = heat-contrib-extraroute
+version = 0.1
 summary = Heat resource for ExtraRoute
 description-file =
     README.md
