--- a/contrib/heat_gnocchi/setup.cfg
+++ b/contrib/heat_gnocchi/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
 name = heat-contrib-gnocchi
+version = 0.1
 summary = Heat resources for working gnocchi queues
 description-file =
     README.md
