--- a/contrib/heat_keystoneclient_v2/setup.cfg
+++ b/contrib/heat_keystoneclient_v2/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
 name = heat-contrib-keystone-v2
+version = 0.1
 summary = Keystone V2 compatible client
 description-file =
     README.md
