--- a/contrib/cinder_volume_type/setup.cfg
+++ b/contrib/cinder_volume_type/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
 name = heat-contrib-cinder-volume-type
+version = 0.1
 summary = Heat resource for managing cinder volume_types
 description-file =
     README.md
