--- a/contrib/heat_docker/setup.cfg
+++ b/contrib/heat_docker/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
 name = heat-contrib-docker
+version = 0.1
 summary = Heat resource for Docker containers
 description-file =
     README.md
