--- a/contrib/heat_zaqar/setup.cfg
+++ b/contrib/heat_zaqar/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
 name = heat-contrib-zaqar
+version = 0.1
 summary = Heat resources for working Zaqar queues
 description-file =
     README.md
