--- a/contrib/nova_flavor/setup.cfg
+++ b/contrib/nova_flavor/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
 name = heat-contrib-nova-flavor
+version = 0.1
 summary = Heat resource for managing nova flavors
 description-file =
     README.md
