--- a/contrib/rackspace/setup.cfg
+++ b/contrib/rackspace/setup.cfg
@@ -1,5 +1,6 @@
 [metadata]
 name = heat-contrib-rackspace
+version = 0.1
 summary = Heat resources for working with the Rackspace Cloud
 description-file =
     README.md
