Func test conf to specify boot config
This adds a functional test config option boot_config_env which
can specify a path to an environment file which defines boot config
resources for any test which needs the heat agent projects.

By default this value points to boot_config_none_env.yaml, which assumes
the image is already completely configured with the heat agent projects.

The aim is that in the gate jobs the following will be set:
boot_config_env=/opt/stack/new/heat-templates/hot/software-config/boot-config/test_image_env.yaml

And the image_ref will refer to the latest built image in
http://tarballs.openstack.org/heat-test-image/

Change-Id: I1fa09bf3a8be248829061b931dd773973732fa52

--- a/heat_integrationtests/scenario/templates/test_server_software_config.yaml
+++ b/heat_integrationtests/scenario/templates/test_server_software_config.yaml
@@ -136,11 +136,7 @@ resources:
       signal_transport: {get_param: signal_transport}
 
   cfg_user_data:
-    type: OS::Heat::SoftwareConfig
-    properties:
-      config: |
-        #!/bin/sh
-        echo "user data script"
+    type: Heat::InstallConfigAgent
 
   server:
     type: OS::Nova::Server
@@ -154,7 +150,7 @@ resources:
       - network: {get_param: network}
       user_data_format: SOFTWARE_CONFIG
       software_config_transport: {get_param: software_config_transport}
-      user_data: {get_resource: cfg_user_data}
+      user_data: {get_attr: [cfg_user_data, config]}
 
 outputs:
   res1:
