Add trove flavor custom constraint
Change-Id: I08f866434beef9074dc554eb8693dd5ac421df6e

--- a/setup.cfg
+++ b/setup.cfg
@@ -71,6 +71,7 @@ heat.constraints =
     cinder.snapshot = heat.engine.clients.os.cinder:VolumeSnapshotConstraint
     cinder.vtype = heat.engine.clients.os.cinder:VolumeTypeConstraint
     sahara.image = heat.engine.clients.os.sahara:ImageConstraint
+    trove.flavor = heat.engine.clients.os.trove:FlavorConstraint
 
 heat.stack_lifecycle_plugins =
 
