Use AWS::EC2::EIP for test_server_cfn_init
Many (most) clouds won't have the assumed network to directly ping/ssh
to the default IP address. This changes test_server_cfn_init to assign
a floating IP, and use that to ping and ssh to the server.

It also moves the ping to the end of the test. This was initially
meant to catch regressions in a co-gated neutron, but it is no longer
required for a heat-only test.

Change-Id: Ia9404289b2f9632883a479ccb435cbf6c51fcf2f

--- a/heat_integrationtests/scenario/templates/test_server_cfn_init.yaml
+++ b/heat_integrationtests/scenario/templates/test_server_cfn_init.yaml
@@ -27,6 +27,12 @@ Resources:
     Type: AWS::IAM::AccessKey
     Properties:
       UserName: {Ref: CfnUser}
+
+  IPAddress:
+    Type: AWS::EC2::EIP
+    Properties:
+      InstanceId: {Ref: SmokeServer}
+
   SmokeServer:
     Type: AWS::EC2::Instance
     Metadata:
@@ -78,4 +84,4 @@ Outputs:
   SmokeServerIp:
     Description: IP address of server
     Value:
-      Fn::GetAtt: [SmokeServer, PublicIp]
+      Ref: IPAddress
