Update integrations tests config sample
a new option was missing

Change-Id: I9e98170733a13e5a4e656ab70c50d15e722e42e2

--- a/heat_integrationtests/heat_integrationtests.conf.sample
+++ b/heat_integrationtests/heat_integrationtests.conf.sample
@@ -52,6 +52,11 @@
 # Visible fixed network name  (string value)
 #fixed_network_name = private
 
+# Path to environment file which defines the resource type
+# Heat::InstallConfigAgent. Needs to be appropriate for the image_ref. (string
+# value)
+#boot_config_env = heat_integrationtests/scenario/templates/boot_config_none_env.yaml
+
 # Visible fixed sub-network name  (string value)
 #fixed_subnet_name = private-subnet
 
@@ -79,5 +84,5 @@
 # Skip Stack Abandon Integration tests (boolean value)
 #skip_stack_abandon_tests = false
 
-# Timeout in seconds to wait for connectivity to server
+# Timeout in seconds to wait for connectivity to server. (integer value)
 #connectivity_timeout = 120
