Add minimal_instance_type config option
for integration tests. Use a flavor similar to m1.micro for that.
It is enough to start both minimal and functional tests images with no
serious payload and should decrease the amount of RAM consumed by VMs
in corresponding tests four-fold.

Change-Id: I378b5a3cde020176ac45ebf8d05bd13278861a4e
Related-Bug: #1435285

--- a/heat_integrationtests/heat_integrationtests.conf.sample
+++ b/heat_integrationtests/heat_integrationtests.conf.sample
@@ -23,6 +23,9 @@
 # workload (string value)
 #instance_type = <None>
 
+# Instance type enough for simplest cases. (string value)
+#minimal_instance_type = <None>
+
 # Name of image to use for tests which boot servers. (string value)
 #image_ref = <None>
 
