Move to hacking 0.10
Release notes: http://lists.openstack.org/pipermail/openstack-dev/2015-January/054165.html

Remove deleted hacking rules from toxini (H803)

Change-Id: I97965ec81e6eaf771f74b6044945f23fae395ba5

--- a/tox.ini
+++ b/tox.ini
@@ -56,8 +56,7 @@ commands =
 [flake8]
 # H404 multi line docstring should start with a summary
 # H405 multi line docstring summary not separated with an empty line
-# H803 no full stop at the end of the commit message
-ignore = H404,H405,H803
+ignore = H404,H405
 show-source = true
 exclude=.*,dist,*openstack/common*,*lib/python*,*egg,tools,build
 max-complexity=20
