--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ kombu>=2.5.0
 lxml>=2.3
 netaddr>=0.7.12
 oslo.config>=1.9.3,<1.10.0  # Apache-2.0
+oslo.concurrency>=1.8.0,<1.9.0         # Apache-2.0
 oslo.context>=0.2.0,<0.3.0                     # Apache-2.0
 oslo.db>=1.7.0,<1.8.0  # Apache-2.0
 oslo.i18n>=1.5.0,<1.6.0  # Apache-2.0
