Add separate requirements.txt to integration tests
and use it during tox run. This should speed up the tox venv creation
somewhat, as the new requirements is shorter, thus less packages are
installed or C extensions compiled.

Also this is the first step to ease packaging of the integration tests
as a separate tool.

Change-Id: I914eb675e7f025e03a22719d5dff8ed741fbd37d

--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,10 @@ commands =
   bash tools/pretty_tox.sh '{posargs}'
 
 [testenv:integration]
+setenv = VIRTUAL_ENV={envdir}
+         TESTR_START_DIR=heat_integrationtests
+usedevelop = False
+deps = -r{toxinidir}/heat_integrationtests/requirements.txt
 commands =
   bash tools/pretty_tox.sh '--concurrency=1 ^heat_integrationtests.*{posargs}'
 
