--- a/.testr.conf
+++ b/.testr.conf
@@ -1,7 +1,8 @@
 [DEFAULT]
 test_command=
     PYTHON=$(echo ${PYTHON:-python} | sed 's/--source heat//g')
-    ${PYTHON} -m subunit.run discover -s . $LISTOPT $IDOPTION
-    for plugin in contrib/*; do ${PYTHON} -m subunit.run discover -s $plugin $LISTOPT $IDOPTION; done
+    START_AT=${TESTR_START_DIR:-.}
+    ${PYTHON} -m subunit.run discover -s $START_AT -t . $LISTOPT $IDOPTION
+    if [ "$START_AT" = "." ]; then for plugin in $START_AT/contrib/*; do ${PYTHON} -m subunit.run discover -s $plugin $LISTOPT $IDOPTION; done; fi
 test_id_option=--load-list $IDFILE
 test_list_option=--list
