Run heat_integrationtests in parallel
This should improve the turnaround time of the gate tests and
also make room for more integration tests.

Also, remove duplicate addCleanup.

Change-Id: Iacdd554ee13bb87b0b71ebf547209f94e945f342

--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ setenv = VIRTUAL_ENV={envdir}
 usedevelop = False
 deps = -r{toxinidir}/heat_integrationtests/requirements.txt
 commands =
-  bash tools/pretty_tox.sh '--concurrency=1 ^heat_integrationtests.*{posargs}'
+  bash tools/pretty_tox.sh '^heat_integrationtests.*{posargs}'
 
 [testenv:pep8]
 commands =
