Add address format check for property
Some resource receive IP address as property, this patch adds
custom constraint for IP address format validation.

Implemented: blueprint enhance-property-constraints
Change-Id: Ie4ad71418aa355a4e24ac6c2a33bd85c19c5ef11

--- a/setup.cfg
+++ b/setup.cfg
@@ -72,6 +72,7 @@ heat.constraints =
     cinder.vtype = heat.engine.clients.os.cinder:VolumeTypeConstraint
     sahara.image = heat.engine.clients.os.sahara:ImageConstraint
     trove.flavor = heat.engine.clients.os.trove:FlavorConstraint
+    ip_addr = heat.engine.clients.os.neutron:IPConstraint
 
 heat.stack_lifecycle_plugins =
 
