--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,pep8
+envlist = py27,pep8,py34
 minversion = 1.6
 skipsdist = True
 
@@ -56,6 +56,17 @@ commands = python setup.py build_sphinx
 commands =
     oslo-config-generator --config-file=config-generator.conf
     oslo-config-generator --config-file=heat_integrationtests/config-generator.conf
+
+# FIXME(sirushtim): Sneak in flake8 here for now. This env will also be used
+#                   to run the tests in the near future.
+[testenv:py34]
+deps = -r{toxinidir}/requirements-py3.txt
+       -r{toxinidir}/test-requirements-py3.txt
+commands =
+  flake8 heat bin/heat-api bin/heat-api-cfn bin/heat-api-cloudwatch bin/heat-engine bin/heat-manage contrib heat_integrationtests
+  find {toxinidir} -not -path '{toxinidir}/.tox/*' -name '*.pyc' -delete
+  python setup.py testr --slowest --testr-args='--load-list py3-testlist'
+
 
 [flake8]
 # H404 multi line docstring should start with a summary
