Custom constrain for keystone service
Adds custom constrain for keystone service.

implements blueprint keystone-resource-service-endpoint

Change-Id: I6a2145ab51688292eb732e578db87fb993d2804e

--- a/contrib/heat_keystone/setup.cfg
+++ b/contrib/heat_keystone/setup.cfg
@@ -1,6 +1,5 @@
 [metadata]
 name = heat-contrib-keystone
-version = 0.1
 summary = Heat resources for Keystone
 description-file =
     README.md
@@ -35,6 +34,7 @@ heat.constraints =
     keystone.domain=heat_keystone.client:KeystoneDomainConstraint
     keystone.project=heat_keystone.client:KeystoneProjectConstraint
     keystone.group=heat_keystone.client:KeystoneGroupConstraint
+    keystone.service=heat_keystone.client:KeystoneServiceConstraint
 
 [global]
 setup-hooks =
