Use ipv4 subnet in Heat scenario tests
Previously we used first subnet from network and it was correct, because
there was only one subnet in network by default. According to the last changes
in devstack new ipv6 subnet was added to the all default networks.
This patch adds function to the base class, which allows to choose
subnet based on ip version. All scenario tests were updated to use only ipv4
subnet.

Also was added property for FIP, which specify ip of vip.

Change-Id: I199075909b97fe98e1a3c1d175b0b4cf7100403d
Closes-Bug: #1449896

--- a/heat_integrationtests/scenario/templates/test_neutron_loadbalancer.yaml
+++ b/heat_integrationtests/scenario/templates/test_neutron_loadbalancer.yaml
@@ -106,6 +106,8 @@ resources:
        floating_network: { get_param: external_network_id }
        port_id:
          { get_attr: [test_pool, vip, 'port_id'] }
+       fixed_ip_address:
+         { get_attr: [test_pool, vip, 'address'] }
 
   LBaaS:
     type: OS::Neutron::LoadBalancer
