Use ipv4 address for connectivity in lb integration test
You can not specify subnet for a server creation. Therefore server
nic would get ip adresses from all subnets. We should pick the
ipv4 address to check connectivity.

Also added change to NovaClientPlugin to provide ipv4 address.

Change-Id: I2eb3bdb359aca0cfaebf0be98db79170c681a078
Closes-Bug: #1450293

--- a/heat_integrationtests/scenario/templates/test_neutron_loadbalancer.yaml
+++ b/heat_integrationtests/scenario/templates/test_neutron_loadbalancer.yaml
@@ -119,10 +119,10 @@ resources:
       - { get_resource: server1 }
 
 outputs:
-  serv1_ip:
-    value: {get_attr: [server1, networks, private, 0]}
-  serv2_ip:
-    value: {get_attr: [server2, networks, private, 0]}
+  serv1_addresses:
+    value: {get_attr: [server1, addresses, private]}
+  serv2_addresses:
+    value: {get_attr: [server2, addresses, private]}
   vip:
     value: {get_attr: [test_pool, vip, address]}
   fip:
