Use pbr new autodoc feature
This relies on the new pbr feature that autogenerates the documentation.

Change-Id: Ie3287dfc6a9a4566eb1c444af63ae86954c69e68

--- a/setup.cfg
+++ b/setup.cfg
@@ -115,6 +115,22 @@ domain = heat
 output_dir = heat/locale
 input_file = heat/locale/heat.pot
 
+[pbr]
+autodoc_index_modules = true
+autodoc_exclude_modules =
+    heat.testing.*
+    heat.cmd.*
+    heat.common.*
+    heat.cloudinit.*
+    heat.cfn_client.*
+    heat.doc.*
+    heat.db.*
+    heat.engine.resources.*
+    heat.locale.*
+    heat.openstack.*
+    *.tests.*
+    *.resources.*
+
 [extract_messages]
 keywords = _ gettext ngettext l_ lazy_gettext
 mapping_file = babel.cfg
