Move barbican client in main tree
Move the barbican client out of contrib into the main tree, to have it
available by default.

blueprint barbican-as-secret-backend

Change-Id: Id3fabae3f3c949634d22fad0bd425c7bfce509c8

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,7 @@ oslo.config.opts =
     heat_integrationtests.common.config = heat_integrationtests.common.config:list_opts
 
 heat.clients =
+    barbican = heat.engine.clients.os.barbican:BarbicanClientPlugin
     ceilometer = heat.engine.clients.os.ceilometer:CeilometerClientPlugin
     cinder = heat.engine.clients.os.cinder:CinderClientPlugin
     glance = heat.engine.clients.os.glance:GlanceClientPlugin
