--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ oslo.versionedobjects>=0.1.1
 PasteDeploy>=1.5.0
 posix_ipc
 pycrypto>=2.6
+python-barbicanclient>=3.0.1
 python-ceilometerclient>=1.0.13
 python-cinderclient>=1.2.0
 python-glanceclient>=0.15.0
