--- a/setup.cfg
+++ b/setup.cfg
@@ -74,6 +74,7 @@ heat.constraints =
     trove.flavor = heat.engine.clients.os.trove:FlavorConstraint
     ip_addr = heat.engine.clients.os.neutron:IPConstraint
     mac_addr = heat.engine.clients.os.neutron:MACConstraint
+    net_cidr = heat.engine.clients.os.neutron:CIDRConstraint
 
 heat.stack_lifecycle_plugins =
 
