--- a/heat_integrationtests/requirements.txt
+++ b/heat_integrationtests/requirements.txt
@@ -4,6 +4,7 @@ oslo.messaging>=1.8.0,<1.9.0  # Apache-2.0
 oslo.config>=1.9.3,<1.10.0  # Apache-2.0
 oslo.utils>=1.4.0,<1.5.0  # Apache-2.0
 paramiko>=1.13.0
+python-ceilometerclient>=1.0.13
 python-cinderclient>=1.1.0
 python-keystoneclient>=1.1.0
 python-heatclient>=0.3.0
