Fix integration tests for tox>2.0
Closes-Bug: #1455065
Change-Id: I2e33a2d834dfbef5b3e778757a86a2122d1b1719
(cherry picked from commit e54dcf95faacd715e57c8609a4c457ac1e1a50a1)

--- a/tox.ini
+++ b/tox.ini
@@ -28,6 +28,7 @@ commands =
 [testenv:integration]
 setenv = VIRTUAL_ENV={envdir}
          TESTR_START_DIR=heat_integrationtests
+passenv = OS_*
 usedevelop = False
 deps = -r{toxinidir}/heat_integrationtests/requirements.txt
 commands =
