Add and apply cinder backup constraint
Add custom constraint for cinder backup and apply
it to related resources property.

Change-Id: I6e7f0dae98fae6f36b46ca6fcf02f77f79f942dd
Blueprint: add-cinder-backup-constraint

--- a/setup.cfg
+++ b/setup.cfg
@@ -79,6 +79,7 @@ heat.constraints =
     cinder.volume = heat.engine.clients.os.cinder:VolumeConstraint
     cinder.snapshot = heat.engine.clients.os.cinder:VolumeSnapshotConstraint
     cinder.vtype = heat.engine.clients.os.cinder:VolumeTypeConstraint
+    cinder.backup = heat.engine.clients.os.cinder:VolumeBackupConstraint
     sahara.image = heat.engine.clients.os.sahara:ImageConstraint
     trove.flavor = heat.engine.clients.os.trove:FlavorConstraint
     ip_addr = heat.engine.constraint.common_constraints:IPConstraint
