Update wsgi.py to support reload from conf on SIGHUP
These changes are taken from the glance wsgi.py from where
heat wsgi.py originated. These changes are to support reload
of the service with new configuration parameters when SIGHUP
is received.

The reload of conf will only work if the server is running
with workers. If workers is 0 then it wont reload.

Co-Authored-By: Tetiana Lashchova <tlashchova@mirantis.com>
Change-Id: I7fd391209591c149fb95136d92dd1d82cfb7a6de
Closes-Bug: #1449807
Closes-Bug: #1276694

--- a/heat_integrationtests/requirements.txt
+++ b/heat_integrationtests/requirements.txt
@@ -5,6 +5,7 @@ pbr<2.0,>=0.11
 kombu>=3.0.7
 oslo.log>=1.2.0 # Apache-2.0
 oslo.messaging!=1.12.0,>=1.8.0 # Apache-2.0
+oslo.concurrency>=2.1.0
 oslo.config>=1.11.0 # Apache-2.0
 oslo.utils>=1.6.0 # Apache-2.0
 paramiko>=1.13.0
