--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,7 @@ python-novaclient>=2.22.0
 python-saharaclient>=0.9.0
 python-swiftclient>=2.2.0
 python-troveclient>=1.0.7
+python-zaqarclient>=0.0.3
 PyYAML>=3.1.0
 qpid-python
 requests>=2.5.2
