--- a/setup.cfg
+++ b/setup.cfg
@@ -57,6 +57,7 @@ heat.clients =
     swift = heat.engine.clients.os.swift:SwiftClientPlugin
     trove = heat.engine.clients.os.trove:TroveClientPlugin
     sahara = heat.engine.clients.os.sahara:SaharaClientPlugin
+    zaqar = heat.engine.clients.os.zaqar:ZaqarClientPlugin
 
 heat.constraints =
     nova.flavor = heat.engine.clients.os.nova:FlavorConstraint
