Fix py27log env in tox
Add ^(?!heat_integrationtests) to py27log env to have the same
behaviour as py27 env

Change-Id: If092a56c840d52edd06076256e4832337ddc722a

--- a/tox.ini
+++ b/tox.ini
@@ -23,7 +23,7 @@ whitelist_externals =
 [testenv:py27log]
 commands =
   find . -type f -name "*.pyc" -delete
-  bash tools/pretty_tox.sh '{posargs}'
+  bash tools/pretty_tox.sh '^(?!heat_integrationtests){posargs}'
 
 [testenv:integration]
 setenv = VIRTUAL_ENV={envdir}
