--- a/config-generator.conf
+++ b/config-generator.conf
@@ -9,10 +9,10 @@ namespace = heat.engine.clients
 namespace = heat.engine.notification
 namespace = heat.engine.resources
 namespace = heat.openstack.common.eventlet_backdoor
-namespace = heat.openstack.common.policy
 namespace = heat.api.middleware.ssl
 namespace = heat.api.aws.ec2token
 namespace = keystonemiddleware.auth_token
 namespace = oslo.messaging
 namespace = oslo.db
 namespace = oslo.log
+namespace = oslo.policy
