Get rid of oslo-incubator copy of middleware
We have already moved away from openstack/common/middleware modules
to the oslo_middlware library. Let us cleanup the remaining files
here.

Change-Id: I9fe551385aa11ee0da23d77fc8fef6107ae2a026

--- a/etc/heat/api-paste.ini
+++ b/etc/heat/api-paste.ini
@@ -96,7 +96,7 @@ paste.filter_factory = heat.common.custom_backend_auth:filter_factory
 
 # Middleware to set x-openstack-request-id in http response header
 [filter:request_id]
-paste.filter_factory = oslo.middleware.request_id:RequestId.factory
+paste.filter_factory = oslo_middleware.request_id:RequestId.factory
 
 [filter:osprofiler]
 paste.filter_factory = osprofiler.web:WsgiMiddleware.factory
