Designate client plugin
Adds the designate client plugin

implements blueprint heat-designate-resource

Change-Id: I722f90b85ae7bfc91d0a187032bb54158de41d88

--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ python-barbicanclient>=3.0.1
 python-ceilometerclient>=1.0.13
 python-cinderclient>=1.2.1
 python-glanceclient>=0.18.0
+python-designateclient>=1.0.0
 python-heatclient>=0.3.0
 python-keystoneclient>=1.6.0
 python-neutronclient>=2.3.11,<3
