Move Magnum client into main tree
This moves the magnum client plugin out of contrib into the main tree.

Change-Id: Ie520bcb27530394af0afef8335e3d57d7dc26121
Implements: partial blueprint magnum-resources

--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,7 @@ heat.clients =
     glance = heat.engine.clients.os.glance:GlanceClientPlugin
     heat = heat.engine.clients.os.heat_plugin:HeatClientPlugin
     keystone = heat.engine.clients.os.keystone:KeystoneClientPlugin
+    magnum = heat.engine.clients.os.magnum:MagnumClientPlugin
     manila = heat.engine.clients.os.manila:ManilaClientPlugin
     mistral = heat.engine.clients.os.mistral:MistralClientPlugin
     nova = heat.engine.clients.os.nova:NovaClientPlugin
