--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,7 @@ heat.clients =
     glance = heat.engine.clients.os.glance:GlanceClientPlugin
     heat = heat.engine.clients.os.heat_plugin:HeatClientPlugin
     keystone = heat.engine.clients.os.keystone:KeystoneClientPlugin
+    manila = heat.engine.clients.os.manila:ManilaClientPlugin
     nova = heat.engine.clients.os.nova:NovaClientPlugin
     neutron = heat.engine.clients.os.neutron:NeutronClientPlugin
     swift = heat.engine.clients.os.swift:SwiftClientPlugin
