--- a/setup.cfg
+++ b/setup.cfg
@@ -53,6 +53,7 @@ heat.clients =
     heat = heat.engine.clients.os.heat_plugin:HeatClientPlugin
     keystone = heat.engine.clients.os.keystone:KeystoneClientPlugin
     manila = heat.engine.clients.os.manila:ManilaClientPlugin
+    mistral = heat.engine.clients.os.mistral:MistralClientPlugin
     nova = heat.engine.clients.os.nova:NovaClientPlugin
     neutron = heat.engine.clients.os.neutron:NeutronClientPlugin
     swift = heat.engine.clients.os.swift:SwiftClientPlugin
