Move the heat_keystoneclient_v2 contrib package
As discussed in the Vancouver summit, the only known user of the
heat_keystoneclient_v2 contrib package is Rackspace, so it was agreed to
merge it with contrib/rackspace package.

Change-Id: I8a069275d5ea3f3913b6f8ae8c6fc48b69861551

--- a/contrib/rackspace/setup.cfg
+++ b/contrib/rackspace/setup.cfg
@@ -24,6 +24,7 @@ packages =
 # Copy to /usr/lib/heat for non-stevedore plugin loading
 data_files =
     lib/heat/rackspace = rackspace/resources/*
+    lib/heat/heat_keystoneclient_v2 = heat_keystoneclient_v2/*
 
 [entry_points]
 
