make heat-manage a console_script entry point
pbr has extra sauce for correctly making installed cli tools not do
unneeded pkg_resources metadata checks (that can only end in tears) if
those scripts are installed via the console_script entry
point. heat-manage looks like it is ready to be used this way.

Other scripts should be converted in the future to avoid erroneous
errors due to library metadata mismatch, which these tools should not
care about.

Change-Id: Ibfd54e7b1bae700e4fb49a32e5bf7c00d1f104d9

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,9 +28,11 @@ scripts =
     bin/heat-engine
     bin/heat-keystone-setup
     bin/heat-keystone-setup-domain
-    bin/heat-manage
 
 [entry_points]
+console_scripts =
+    heat-manage = heat.cmd.manage:main
+
 oslo.config.opts =
     heat.common.config = heat.common.config:list_opts
     heat.common.crypt = heat.common.crypt:list_opts
