Adds designate.domain constraint
Adds custom constraint for the designate domain.

implements blueprint: heat-designate-resource

Change-Id: I2a0c9b5af9d6aaa9c8a74b5a266f26f05dfffd56

--- a/setup.cfg
+++ b/setup.cfg
@@ -50,6 +50,7 @@ heat.clients =
     barbican = heat.engine.clients.os.barbican:BarbicanClientPlugin
     ceilometer = heat.engine.clients.os.ceilometer:CeilometerClientPlugin
     cinder = heat.engine.clients.os.cinder:CinderClientPlugin
+    designate = heat.engine.clients.os.designate:DesignateClientPlugin
     glance = heat.engine.clients.os.glance:GlanceClientPlugin
     heat = heat.engine.clients.os.heat_plugin:HeatClientPlugin
     keystone = heat.engine.clients.os.keystone:KeystoneClientPlugin
@@ -90,6 +91,7 @@ heat.constraints =
     manila.share_snapshot = heat.engine.clients.os.manila:ManilaShareSnapshotConstraint
     manila.share_network = heat.engine.clients.os.manila:ManilaShareNetworkConstraint
     manila.share_type = heat.engine.clients.os.manila:ManilaShareTypeConstraint
+    designate.domain = heat.engine.clients.os.designate:DesignateDomainConstraint
 
 heat.stack_lifecycle_plugins =
 
