Switch to oslo.service
oslo.service has graduated, so heat should consume it.

Change-Id: I9c1899eb37505e64967e9cb77da23bb169498aba
Closes-Bug: #1466851

--- a/config-generator.conf
+++ b/config-generator.conf
@@ -8,7 +8,6 @@ namespace = heat.common.wsgi
 namespace = heat.engine.clients
 namespace = heat.engine.notification
 namespace = heat.engine.resources
-namespace = heat.openstack.common.eventlet_backdoor
 namespace = heat.api.middleware.ssl
 namespace = heat.api.aws.ec2token
 namespace = keystonemiddleware.auth_token
@@ -16,3 +15,4 @@ namespace = oslo.messaging
 namespace = oslo.db
 namespace = oslo.log
 namespace = oslo.policy
+namespace = oslo.service
