--- a/requirements-py3.txt
+++ b/requirements-py3.txt
@@ -22,6 +22,7 @@ oslo.log>=1.2.0 # Apache-2.0
 oslo.messaging!=1.12.0,>=1.8.0 # Apache-2.0
 oslo.middleware!=2.0.0,>=1.2.0 # Apache-2.0
 oslo.serialization>=1.4.0 # Apache-2.0
+oslo.service>=0.1.0 # Apache-2.0
 oslo.utils>=1.6.0 # Apache-2.0
 osprofiler>=0.3.0 # Apache-2.0
 oslo.versionedobjects>=0.3.0
